# webtiles

./: .bazelrc  .gitignore  MODULE.bazel  README.md  package.json  tsconfig.json
converter/: BUILD.bazel
examples/: index.html  index2.html
lua/: BUILD.bazel  README.md  webtiles.lua  webtiles_basic.lua  webtiles_basic_test.lua  webtiles_test.lua
lua/webtiles/: compat.lua  compat_5_1.lua  compat_5_3.lua  compat_luajit.lua
lua/webtiles/fbs/: BlockType.lua  DenseLocations.lua  FileHeader.lua  Header.lua  HeaderSignature.lua  HeaderSize.lua  HeaderVersion.lua  IndexFormat.lua  IndexHeader.lua  IndexMagic.lua  LinkItem.lua  Location.lua  LocationItem.lua  ResponseParams.lua  SparseBlock.lua  SparseLocations.lua
server_nginx/: BUILD.bazel  Dockerfile  README.md  handle_aio.lua  handle_tiles.lua  nginx.conf
server_nginx/remote/: BUILD.bazel  Dockerfile  example.html  handle_tiles.lua  nginx.conf
ts/: common.test.ts  common.ts  fbs.ts  format_plain.ts  format_sparse.ts  index.ts  protocols.ts  reader.test.ts  reader.ts
ts/fbs/: block-type.ts  dense-locations.ts  file-header.ts  header-signature.ts  header-size.ts  header-version.ts  header.ts  index-format.ts  index-header.ts  index-magic.ts  link-item.ts  location-item.ts  location.ts  response-params.ts  sparse-block.ts  sparse-locations.ts
webtiles/: BUILD.bazel  common.h  reader.cpp  reader.h  reader_test.cpp  writer.cpp  writer.h
webtiles/fbs/: BUILD.bazel  header.fbs  response_params.fbs  sparse_block.fbs
webtiles/index/: index.h  index_test.cpp
webtiles/internal/: test_utils.h
